20170925 commit Add: 1.Fb login 2.Home page 3.circleImageView
Fix:
1.Register.java, email check imageView when editText is null

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
         android:weightSum="2">
 
         <LinearLayout
-            android:id="@+id/button_lgoin_fb"
+            android:id="@+id/button_login_fb"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginRight="6dp"
@@ -235,6 +235,5 @@
         android:textColor="@color/textView_login_forget_pw"
         android:textSize="@dimen/textView_login_forget_pw"
         android:text="@string/textView_login_forget_pw"/>
-
 
 </RelativeLayout>
