--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,16 +13,42 @@
 
         <TextView
             android:id="@+id/toolbar_home_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginRight="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:textColor="@color/toolbarTitle"
             android:textSize="@dimen/toolbarTitle"
-            android:gravity="center_horizontal"
-            android:text="Home"
-            android:layout_alignParentStart="true" />
+            android:text="Home"/>
 
     </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="62dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_below="@+id/toolbar_home"
+        android:weightSum="1">
+        
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageView_home_userPhoto"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/guest_img_profile" />
+
+        <TextView
+            android:id="@+id/textView_home_userName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/textView_home_userName"
+            android:textSize="@dimen/textView_home_userName"
+            android:text="test"/>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
