--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="textView_login_title">14sp</dimen>
     <dimen name="editText_login_register_hint">14sp</dimen>
     <dimen name="textView_login_forget_pw">14sp</dimen>
+    <dimen name="textView_home_userName">18sp</dimen>
 </resources>
