--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,6 +23,7 @@
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
+        android:id="@+id/linearLayout_home_1"
         android:layout_width="match_parent"
         android:layout_height="62dp"
         android:layout_marginLeft="10dp"
@@ -46,9 +47,24 @@
             android:layout_gravity="center"
             android:textColor="@color/textView_home_userName"
             android:textSize="@dimen/textView_home_userName"
+            android:fontFamily="sans-serif"
             android:text="test"/>
 
     </LinearLayout>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleView_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/linearLayout_home_1"
+        android:layout_above="@+id/bottom_navigation_home">
+    </android.support.v7.widget.RecyclerView>
+
+    <com.ashokvarma.bottomnavigation.BottomNavigationBar
+        android:id="@+id/bottom_navigation_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+    </com.ashokvarma.bottomnavigation.BottomNavigationBar>
 
 </RelativeLayout>
