--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -137,205 +137,221 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout_register_3"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_below="@+id/linearLayout_register_2"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/linearLayout_register_2">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textView_login_title"
-            android:textSize="@dimen/textView_login_title"
-            android:text="Email"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:weightSum="2"
-            android:orientation="horizontal">
-            <EditText
-                android:id="@+id/editText_register_email"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/linearLayout_register_3"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:layout_weight="1"
-                android:background="@null"
-                android:textColorHint="@color/editText_login_register_hint"
-                android:textSize="@dimen/editText_login_register_hint"
-                android:hint="@string/editText_hint_email"
-                android:textColor="@color/editText_login_register_input"/>
-            <ImageView
-                android:id="@+id/imageView_emailAvailable"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/guest_img_correct"
-                android:visibility="gone"/>
+                android:layout_height="57dp"
+                android:layout_below="@+id/linearLayout_register_2"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textView_login_title"
+                    android:textSize="@dimen/textView_login_title"
+                    android:text="Email"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:weightSum="2"
+                    android:orientation="horizontal">
+                    <EditText
+                        android:id="@+id/editText_register_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="32dp"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:textColorHint="@color/editText_login_register_hint"
+                        android:textSize="@dimen/editText_login_register_hint"
+                        android:hint="@string/editText_hint_email"
+                        android:textColor="@color/editText_login_register_input"/>
+                    <ImageView
+                        android:id="@+id/imageView_emailAvailable"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:src="@drawable/guest_img_correct"
+                        android:visibility="gone"/>
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:background="@color/line_login"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout_register_4"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:layout_below="@+id/linearLayout_register_3"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textView_login_title"
+                    android:textSize="@dimen/textView_login_title"
+                    android:text="Password"/>
+
+                <EditText
+                    android:id="@+id/editText_register_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:textColorHint="@color/editText_login_register_hint"
+                    android:textSize="@dimen/editText_login_register_hint"
+                    android:hint="@string/editText_hint_password"
+                    android:textColor="@color/editText_login_register_input"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:background="@color/line_login"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout_register_5"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:layout_below="@+id/linearLayout_register_4"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textView_login_title"
+                    android:textSize="@dimen/textView_login_title"
+                    android:text="Username"/>
+
+                <EditText
+                    android:id="@+id/editText_register_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:textColorHint="@color/editText_login_register_hint"
+                    android:textSize="@dimen/editText_login_register_hint"
+                    android:hint="@string/editText_hint_username"
+                    android:textColor="@color/editText_login_register_input"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:background="@color/line_login"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout_register_6"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:layout_below="@+id/linearLayout_register_5"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textView_login_title"
+                    android:textSize="@dimen/textView_login_title"
+                    android:text="Date of birth (optional)"/>
+
+                <EditText
+                    android:id="@+id/editText_register_birthday"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:textColorHint="@color/editText_login_register_hint"
+                    android:textSize="@dimen/editText_login_register_hint"
+                    android:hint="@string/editText_hint_birthdate"
+                    android:textColor="@color/editText_login_register_input"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:background="@color/line_login"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout_register_7"
+                android:layout_width="match_parent"
+                android:layout_height="57dp"
+                android:layout_below="@+id/linearLayout_register_6"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textView_login_title"
+                    android:textSize="@dimen/textView_login_title"
+                    android:text="Gender"/>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:textColorHint="@color/editText_login_register_hint"
+                    android:textSize="@dimen/editText_login_register_hint"
+                    android:hint="@string/editText_hint_gender"
+                    android:textColor="@color/editText_login_register_input"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:background="@color/line_login"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout_register_8"
+                android:layout_width="match_parent"
+                android:layout_height="68dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_alignParentBottom="true"
+                android:visibility="visible">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/guest_btn_green_rate"
+                    android:textAllCaps="false"
+                    android:textColor="@color/button_login_register_submit"
+                    android:textSize="@dimen/button_login_register_submit"
+                    android:text="Sign up"/>
+            </LinearLayout>
+
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2px"
-            android:background="@color/line_login"/>
 
-    </LinearLayout>
+    </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/linearLayout_register_4"
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_below="@+id/linearLayout_register_3"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textView_login_title"
-            android:textSize="@dimen/textView_login_title"
-            android:text="Password"/>
-
-        <EditText
-            android:id="@+id/editText_register_password"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_weight="1"
-            android:background="@null"
-            android:textColorHint="@color/editText_login_register_hint"
-            android:textSize="@dimen/editText_login_register_hint"
-            android:hint="@string/editText_hint_password"
-            android:textColor="@color/editText_login_register_input"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2px"
-            android:background="@color/line_login"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout_register_5"
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_below="@+id/linearLayout_register_4"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textView_login_title"
-            android:textSize="@dimen/textView_login_title"
-            android:text="Username"/>
-
-        <EditText
-            android:id="@+id/editText_register_username"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_weight="1"
-            android:background="@null"
-            android:textColorHint="@color/editText_login_register_hint"
-            android:textSize="@dimen/editText_login_register_hint"
-            android:hint="@string/editText_hint_username"
-            android:textColor="@color/editText_login_register_input"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2px"
-            android:background="@color/line_login"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout_register_6"
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_below="@+id/linearLayout_register_5"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textView_login_title"
-            android:textSize="@dimen/textView_login_title"
-            android:text="Date of birth (optional)"/>
-
-        <EditText
-            android:id="@+id/editText_register_birthday"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_weight="1"
-            android:background="@null"
-            android:textColorHint="@color/editText_login_register_hint"
-            android:textSize="@dimen/editText_login_register_hint"
-            android:hint="@string/editText_hint_birthdate"
-            android:textColor="@color/editText_login_register_input"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2px"
-            android:background="@color/line_login"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout_register_7"
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:layout_below="@+id/linearLayout_register_6"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textView_login_title"
-            android:textSize="@dimen/textView_login_title"
-            android:text="Gender"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_weight="1"
-            android:background="@null"
-            android:textColorHint="@color/editText_login_register_hint"
-            android:textSize="@dimen/editText_login_register_hint"
-            android:hint="@string/editText_hint_gender"
-            android:textColor="@color/editText_login_register_input"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2px"
-            android:background="@color/line_login"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout_register_8"
-        android:layout_width="match_parent"
-        android:layout_height="68dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_alignParentBottom="true"
-        android:visibility="visible">
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/guest_btn_green_rate"
-            android:textAllCaps="false"
-            android:textColor="@color/button_login_register_submit"
-            android:textSize="@dimen/button_login_register_submit"
-            android:text="Sign up"/>
-    </LinearLayout>
 
 
 </RelativeLayout>
