20170926 commit Add: 1.ScrollView in Register.xml 2.Add CardView in  layout_cardview.xml 3.Add RecyclerView in activity_home.xml 4.Add RecyclerAdapter 5.Add TextBadgeItem
Fix:
1.BottomNavigationBar Action icon and InAction icon

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,5 @@
     <color name="gradientEnd">#00000000</color>
     <color name="textView_cardView">#FFFFFF</color>
     <color name="imageButton_cardView">#00000000</color>
+    <color name="badgeItem">#E44044</color>
 </resources>
