--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,4 +33,6 @@
     <color name="textView_cardView">#FFFFFF</color>
     <color name="imageButton_cardView">#00000000</color>
     <color name="badgeItem">#E44044</color>
+    <color name="line_myBooking">#80999999</color>
+    <color name="textView_cardView_booking">#FFFFFF</color>
 </resources>
