--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="textView_login_forget_pw">14sp</dimen>
     <dimen name="textView_home_userName">18sp</dimen>
     <dimen name="textView_cardView">18sp</dimen>
+    <dimen name="textView_cardView_booking1">22sp</dimen>
+    <dimen name="textView_cardView_booking2">14sp</dimen>
+    <dimen name="textView_cardView_bookingButtom">18sp</dimen>
 </resources>
