--- a/app/src/main/res/layout/layout_cardview_booking.xml
+++ b/app/src/main/res/layout/layout_cardview_booking.xml
@@ -9,123 +9,140 @@
     android:layout_gravity="center">
 
     <RelativeLayout
-        android:id="@+id/relativeLayout_cardView_Booking"
+        android:id="@+id/relativeLayout_cardView_Booking_Root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/img_my_booking1">
+        android:layout_height="match_parent">
 
         <RelativeLayout
+            android:id="@+id/relativeLayout_cardView_Booking"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="17dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_toStartOf="@+id/delete_button"
+            android:background="@drawable/img_my_booking1">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView_cardView_booking_title1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="14dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="FunHotel"
-                    android:textColor="@color/textView_cardView_booking"
-                    android:textSize="@dimen/textView_cardView_booking1" />
-
-                <TextView
-                    android:id="@+id/textView_cardView_booking_title2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="25 NOV WED - 28 NOV SAT"
-                    android:textColor="@color/textView_cardView_booking"
-                    android:textSize="@dimen/textView_cardView_booking2" />
-
-            </LinearLayout>
-
-            <ImageButton
-                android:layout_width="47dp"
-                android:layout_height="47dp"
-                android:layout_alignParentRight="true"
-                android:background="@color/imageButton_cardView"
-                android:scaleType="fitCenter"
-                android:src="@drawable/guest_btn_next" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_alignParentBottom="true">
-
-            <View
-                android:layout_width="2px"
-                android:layout_height="27dp"
-                android:layout_centerInParent="true"
-                android:background="@color/line_myBooking" />
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="2">
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="17dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:id="@+id/button_cardView_Direction"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:clickable="true"
-                    android:orientation="horizontal"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:src="@drawable/guest_ic_booking_direction" />
+                    android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/textView_cardView_booking_title1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:layout_marginTop="14dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="FunHotel"
                         android:textColor="@color/textView_cardView_booking"
-                        android:textSize="@dimen/textView_cardView_bookingButtom"
-                        android:text="Direction"/>
+                        android:textSize="@dimen/textView_cardView_booking1" />
+
+                    <TextView
+                        android:id="@+id/textView_cardView_booking_title2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="sans-serif-medium"
+                        android:text="25 NOV WED - 28 NOV SAT"
+                        android:textColor="@color/textView_cardView_booking"
+                        android:textSize="@dimen/textView_cardView_booking2" />
 
                 </LinearLayout>
 
+                <ImageButton
+                    android:layout_width="47dp"
+                    android:layout_height="47dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@color/imageButton_cardView"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/guest_btn_next" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_alignParentBottom="true">
+
+                <View
+                    android:layout_width="2px"
+                    android:layout_height="27dp"
+                    android:layout_centerInParent="true"
+                    android:background="@color/line_myBooking" />
+
                 <LinearLayout
-                    android:id="@+id/button_cardView_Contact"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:clickable="true"
-                    android:orientation="horizontal"
-                    android:layout_weight="1">
+                    android:weightSum="2">
 
-                    <ImageView
-                        android:layout_width="27dp"
-                        android:layout_height="27dp"
-                        android:src="@drawable/guest_ic_booking_contact" />
-
-                    <TextView
+                    <LinearLayout
+                        android:id="@+id/button_cardView_Direction"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
-                        android:textColor="@color/textView_cardView_booking"
-                        android:textSize="@dimen/textView_cardView_bookingButtom"
-                        android:text="Contact"/>
+                        android:gravity="center"
+                        android:clickable="true"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
 
+                        <ImageView
+                            android:layout_width="27dp"
+                            android:layout_height="27dp"
+                            android:src="@drawable/guest_ic_booking_direction" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif"
+                            android:textColor="@color/textView_cardView_booking"
+                            android:textSize="@dimen/textView_cardView_bookingButtom"
+                            android:text="Direction"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/button_cardView_Contact"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:clickable="true"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:layout_width="27dp"
+                            android:layout_height="27dp"
+                            android:src="@drawable/guest_ic_booking_contact" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif"
+                            android:textColor="@color/textView_cardView_booking"
+                            android:textSize="@dimen/textView_cardView_bookingButtom"
+                            android:text="Contact"/>
+
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
+
+            </RelativeLayout>
 
         </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/delete_button"
+            android:layout_width="5dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:background="@color/recyclerView_delete_button"
+            android:visibility="visible"/>
+
     </RelativeLayout>
 
 
