--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="badgeItem">#E44044</color>
     <color name="line_myBooking">#80999999</color>
     <color name="textView_cardView_booking">#FFFFFF</color>
+    <color name="recyclerView_delete_button">#2760BA</color>
 </resources>
