20171002 commit Add: 1.Add delete button on recyclerView when item swipe 2.Button add click effect (Login/Register/Submit/FB/google)
Fix:
1.ViewPager was lags (photo drawable to mipmap)
2.RecyclerView Delete button swipe

--- a/app/src/main/res/layout/activity_launch_page.xml
+++ b/app/src/main/res/layout/activity_launch_page.xml
@@ -127,7 +127,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:background="@drawable/guest_btn_green_rate"
+            android:background="@drawable/green_button"
             android:textAllCaps="false"
             android:textColor="@color/button_login_register_submit"
             android:textSize="@dimen/button_login_register_submit"
@@ -142,7 +142,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="15dp"
             android:layout_weight="1"
-            android:background="@drawable/guest_btn_green_rate"
+            android:background="@drawable/green_button"
             android:textAllCaps="false"
             android:textColor="@color/button_login_register_submit"
             android:textSize="@dimen/button_login_register_submit"
