--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
             android:layout_gravity="center_vertical"
             android:gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/guest_btn_fb"
+            android:background="@drawable/fb_button"
             android:clickable="true"
             android:focusable="true"
             android:orientation="vertical">
@@ -73,7 +73,7 @@
             android:layout_gravity="center_vertical"
             android:gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/guest_btn_google"
+            android:background="@drawable/google_button"
             android:clickable="true"
             android:focusable="true"
             android:orientation="vertical">
@@ -165,7 +165,8 @@
                 android:background="@null"
                 android:textColorHint="@color/editText_login_register_hint"
                 android:textSize="@dimen/editText_login_register_hint"
-                android:hint="@string/editText_hint_email"/>
+                android:hint="@string/editText_hint_email"
+                android:textColor="@color/editText_login_register_input"/>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
@@ -197,7 +198,8 @@
             android:background="@null"
             android:textColorHint="@color/editText_login_register_hint"
             android:textSize="@dimen/editText_login_register_hint"
-            android:hint="@string/editText_hint_password"/>
+            android:hint="@string/editText_hint_password"
+            android:textColor="@color/editText_login_register_input"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="2px"
@@ -213,16 +215,18 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_below="@+id/linearLayout_login_4">
+
         <Button
+            android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/guest_btn_green_rate"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/green_button"
+            android:text="Log in"
             android:textAllCaps="false"
             android:textColor="@color/button_login_register_submit"
-            android:textSize="@dimen/button_login_register_submit"
-            android:text="Log in"/>
+            android:textSize="@dimen/button_login_register_submit" />
     </LinearLayout>
 
     <TextView
